--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Header -->
   <header class="bg-gradient-to-r from-blue-900 to-blue-500 text-white sticky top-0 z-50 shadow-lg">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-      <img src="img/images.png" alt="FAI Logo" class="h-12">
+      <img src="img/logo.jfif" alt="FAI Logo" class="h-12">
       <nav class="hidden md:flex space-x-6">
         <a href="#inicio" class="hover:underline">Inicio</a>
         <a href="#quienes-somos" class="hover:underline">Quiénes Somos</a>
